--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "name": "shoppers-ui",
-  "type": "module",
   "version": "1.0.0",
   "description": "shoppers-ui",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "start-exp": "nodemon --experimental-json-modules --exec babel-node index.js",
+    "start": "nodemon server/index.js",
+    "start-exp": "nodemon --experimental-json-modules --exec babel-node server/index.js",
     "debug": "set DEBUG=* & npm run start"
   },
   "author": "ibssoln",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.2",
-    "@babel/node": "^7.22.19",
-    "@babel/preset-env": "^7.23.2"
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7"
   }
 }
