Setups for google deploy

--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "1.0.0",
   "description": "shoppers-ui",
   "main": "index.js",
+  "engine": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
+    "build": "babel ./server --out-dir ./build",
+    "start": "node ./build/index.js",
     "node": "nodemon server/index.js",
     "node-exp": "nodemon --experimental-json-modules --exec babel-node server/index.js",
     "node-debug": "set DEBUG=* & npm run node",
-    "angular": "ng serve --proxy-config proxy.config.json",
-    "build": "ng build",
+    "serve": "ng serve --proxy-config proxy.config.json",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "author": "ibssoln",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "nodemon": "^3.0.1",
-    "path": "^0.12.7",
     "@angular/animations": "^15.1.0",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
@@ -27,6 +27,10 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -35,6 +39,10 @@
     "@angular-devkit/build-angular": "^15.1.1",
     "@angular/cli": "~15.1.1",
     "@angular/compiler-cli": "^15.1.0",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.23.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
