--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,6 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -171,3 +170,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+build/*
+dist/*
