--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,6 +1,6 @@
 {
     "/api/*": {
-        "target": "http://localhost:3000",
+        "target": "https://shoppers-ui.uc.r.appspot.com",
         "changeOrigin": true,
         "secure": false,
         "logLevel": "debug"
