--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@clr/angular": "^13.18.2",
+    "@clr/core": "^4.0.15",
+    "@clr/icons": "^13.0.2",
+    "@clr/ui": "^13.18.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
