--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "winston": "^3.8.2",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
