--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "winston": "^3.8.2",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "axios": "^0.21.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.1",
