--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@cds/angular": "^6.2.2",
+    "@cds/core": "^6.2.2",
     "@clr/angular": "^13.18.2",
     "@clr/core": "^4.0.15",
     "@clr/icons": "^13.0.2",
