--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@clr/core": "^4.0.15",
     "@clr/icons": "^13.0.2",
     "@clr/ui": "^13.18.2",
+    "axios": "^0.21.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
@@ -38,12 +39,11 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "winston": "^3.8.2",
-    "zone.js": "~0.12.0",
-    "axios": "^0.21.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.1",
-    "@angular/cli": "~15.1.1",
+    "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.1.0",
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.2",
