--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@clr/angular": "^13.18.2",
     "@clr/icons": "^13.0.2",
     "@clr/ui": "^13.18.2",
+    "@clr/core": "^4.0.15",
     "axios": "^0.21.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
