--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "winston": "^3.8.2",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "ngx-quill": "^20.0.0",
+    "quill": "^1.3.7"
+
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.10",
@@ -52,6 +55,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "@types/quill": "^2.0.13"
   }
 }
