--- a/package.json
+++ b/package.json
@@ -28,21 +28,20 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@clr/angular": "^13.18.2",
+    "@clr/core": "^4.0.15",
     "@clr/icons": "^13.0.2",
     "@clr/ui": "^13.18.2",
-    "@clr/core": "^4.0.15",
     "axios": "^0.21.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ngx-quill": "^20.0.0",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
+    "quill": "^1.3.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "winston": "^3.8.2",
-    "zone.js": "~0.12.0",
-    "ngx-quill": "^20.0.0",
-    "quill": "^1.3.7"
-
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.10",
@@ -56,6 +55,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4",
-    "@types/quill": "^2.0.13"
+    "@types/quill": "1.3"
   }
 }
