--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "quill": "^1.3.7",
+    "quill-delta": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "winston": "^3.8.2",
@@ -48,13 +49,13 @@
     "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/quill": "1.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4",
-    "@types/quill": "1.3"
+    "typescript": "~4.9.4"
   }
 }
